# semantic_world

./: .gitignore  README.md  pyproject.toml  requirements-base.txt  requirements-ci.txt  requirements-self-assessment.txt  requirements.txt
.junie/: guidelines.md
config/: world_conf.py
doc/: _config.yml  _toc.yml  conf.py  developer_guide.rst  intro.md  quizzes  references.bib  requirements.txt  self_assessment  semantic_annotation.md  style_guide.md  user_guide.md  views.md  world_reasoner.md  world_synchronization.md  world_synchronization.rst
docker/: Dockerfile  entrypoint.sh
examples/: creating_custom_bodies.md  factories.md  fit_reasoner.py  graph_of_convex_sets.md  jupyter_quiz.md  loading_worlds.md  multiverse.md  orm_querying.md  persistence_of_annotated_worlds.md  regions.md  semantic_annotation_factories.md  semantic_annotations.md  using_transformations.md  views.md  visualizing_worlds.md  world_reasoner_views.py  world_state_manipulation.md  world_structure_manipulation.md
exercises/: 0_using_transformations.md
quizzes/: creating_custom_bodies_quiz.md  factories_quiz.md  graph_of_convex_sets_quiz.md  loading_worlds_quiz.md  views_quiz.md  visualizing_worlds_quiz.md  world_state_manipulation_quiz.md
rosinstall/: semantic_digital_twin-https.rosinstall  semantic_world-https.rosinstall  semantic_world.rosinstall
scripts/: convert_exercises_for_self_assessment.sh  create_postgres_database_and_user_if_not_exists.sql  generate_orm.py  generate_puml.py  generate_world_from_fbx.py  giang.py  parse_procthor_dataset.py  parse_procthor_files_and_safe_to_database.py  parse_procthor_with_pipeline.py  (+7 more)
semantic_world_msgs/: CMakeLists.txt  package.xml
semantic_world_msgs/msg/: DegreeOfFreedomState.msg  MetaData.msg  PrefixedName.msg  WorldModel.msg  WorldModelModificationBlock.msg  WorldModelReload.msg  WorldState.msg
(+281 files in other folders)
