<?xml version="1.0"?>
<package format="3">
  <name>semantic_world_msgs</name>
  <version>0.1.1</version>
  <description>Messages for a semantic digital twin world snapshot.</description>

  <maintainer email="krohm@uni-bremen.de">You</maintainer>
  <license>LGPL-3.0-only</license>

  <!-- Interface packages: use rosidl_default_generators as a buildtool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Message runtime deps -->
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
    
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
